# AppUpdateDemo

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/xuansu/com/appupdatedemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: bspatch.c  xuansu_com_appupdatedemo_Patch.h
app/src/main/java/xuansu/com/appupdatedemo/: Constants.java  MainActivity.java  Patch.java  Utils.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/xuansu/com/appupdatedemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
